# diffuse-ng

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: CMakeLists.txt  colour.cpp  colour.h  df_about_dialog.cpp  df_about_dialog.h  df_colour.cpp  df_colour.h  df_diffuse.cpp  df_diffuse.h  df_file_diff_viewer.cpp  df_file_diff_viewer.h  df_file_entry.cpp  df_file_entry.h  df_file_info.cpp  df_file_info.h  df_font_button.cpp  df_font_button.h  df_globals.cpp  df_globals.h  df_message_dialog.cpp  df_message_dialog.h  df_notebook_tab.cpp  df_notebook_tab.h  df_numeric_dialog.cpp  df_numeric_dialog.h  df_preferences.cpp  df_preferences.h  df_resources.cpp  df_resources.h  df_scrolled_window.cpp  df_scrolled_window.h  df_syntax_parser.cpp  df_syntax_parser.h  df_utils.cpp  df_utils.h  df_vcss.cpp  df_vcss.h  diffuse.cpp  diffuse.h  diffuse_colour.cpp  (+39 more)
src/vcs/: df_bzr.cpp  df_bzr.h  df_cvs.cpp  df_cvs.h  df_darcs.cpp  df_darcs.h  df_git.cpp  df_git.h  df_hg.cpp  df_hg.h  df_mtn.cpp  df_mtn.h  df_rcs.cpp  df_rcs.h  df_svk.cpp  df_svk.h  df_svn.cpp  df_svn.h  df_vcs_supp.cpp  df_vcs_supp.h
